address sonar major code smells
Signed-off-by: Jesse Nelson <jesse@swirldslabs.com>