@@ -127,7 +127,7 @@ public class EntityRecordItemListener implements RecordItemListener {
 
     @Override
     public void onItem(RecordItem recordItem) throws ImporterException {
-        TransactionRecord txRecord = recordItem.getRecord();
+        TransactionRecord txRecord = recordItem.getTransactionRecord();
         TransactionBody body = recordItem.getTransactionBody();
         int transactionTypeValue = recordItem.getTransactionType();
         TransactionType transactionType = TransactionType.of(transactionTypeValue);
@@ -234,7 +234,7 @@ public class EntityRecordItemListener implements RecordItemListener {
 
     private Transaction buildTransaction(long consensusTimestamp, RecordItem recordItem) {
         TransactionBody body = recordItem.getTransactionBody();
-        TransactionRecord txRecord = recordItem.getRecord();
+        TransactionRecord txRecord = recordItem.getTransactionRecord();
 
         Long validDurationSeconds = body.hasTransactionValidDuration() ?
                 body.getTransactionValidDuration().getSeconds() : null;
@@ -282,7 +282,7 @@ public class EntityRecordItemListener implements RecordItemListener {
 
         var body = recordItem.getTransactionBody();
         var partialDataAction = parserProperties.getPartialDataAction();
-        var transactionRecord = recordItem.getRecord();
+        var transactionRecord = recordItem.getTransactionRecord();
         for (var aa : nonFeeTransfersExtractor.extractNonFeeTransfers(body, transactionRecord)) {
             var entityId = EntityId.EMPTY;
             if (aa.getAmount() != 0) {
@@ -322,7 +322,7 @@ public class EntityRecordItemListener implements RecordItemListener {
 
         ConsensusSubmitMessageTransactionBody transactionBody = recordItem.getTransactionBody()
                 .getConsensusSubmitMessage();
-        TransactionRecord transactionRecord = recordItem.getRecord();
+        TransactionRecord transactionRecord = recordItem.getTransactionRecord();
         var receipt = transactionRecord.getReceipt();
         var topicId = transactionBody.getTopicID();
         int runningHashVersion = receipt.getTopicRunningHashVersion() == 0 ? 1 : (int) receipt
@@ -389,7 +389,7 @@ public class EntityRecordItemListener implements RecordItemListener {
         long consensusTimestamp = recordItem.getConsensusTimestamp();
         var payerAccountId = recordItem.getPayerAccountId();
 
-        for (var aa : recordItem.getRecord().getPaidStakingRewardsList()) {
+        for (var aa : recordItem.getTransactionRecord().getPaidStakingRewardsList()) {
             var accountId = EntityId.of(aa.getAccountID());
             var stakingRewardTransfer = new StakingRewardTransfer();
             stakingRewardTransfer.setAccountId(accountId.getId());
@@ -408,7 +408,7 @@ public class EntityRecordItemListener implements RecordItemListener {
     private void insertTransferList(RecordItem recordItem) {
         long consensusTimestamp = recordItem.getConsensusTimestamp();
 
-        var transferList = recordItem.getRecord().getTransferList();
+        var transferList = recordItem.getTransactionRecord().getTransferList();
         EntityId payerAccountId = recordItem.getPayerAccountId();
         var body = recordItem.getTransactionBody();
         boolean failedTransfer =
@@ -461,7 +461,7 @@ public class EntityRecordItemListener implements RecordItemListener {
 
             updateTokenSupply(
                     tokenId,
-                    recordItem.getRecord().getReceipt().getNewTotalSupply(),
+                    recordItem.getTransactionRecord().getReceipt().getNewTotalSupply(),
                     consensusTimestamp);
 
             tokenBurnTransactionBody.getSerialNumbersList().forEach(serialNumber ->
@@ -478,7 +478,7 @@ public class EntityRecordItemListener implements RecordItemListener {
         // pull token details from TokenCreation body and TokenId from receipt
         TokenCreateTransactionBody tokenCreateTransactionBody = recordItem.getTransactionBody().getTokenCreation();
         long consensusTimestamp = recordItem.getConsensusTimestamp();
-        EntityId tokenId = EntityId.of(recordItem.getRecord().getReceipt().getTokenID());
+        EntityId tokenId = EntityId.of(recordItem.getTransactionRecord().getReceipt().getTokenID());
         EntityId treasury = EntityId.of(tokenCreateTransactionBody.getTreasury());
         Token token = new Token();
         token.setCreatedTimestamp(consensusTimestamp);
@@ -525,10 +525,10 @@ public class EntityRecordItemListener implements RecordItemListener {
         Set<EntityId> autoAssociatedAccounts = insertCustomFees(tokenCreateTransactionBody.getCustomFeesList(),
                 consensusTimestamp, true, tokenId);
         autoAssociatedAccounts.add(treasury);
-        if (recordItem.getRecord().getAutomaticTokenAssociationsCount() > 0) {
+        if (recordItem.getTransactionRecord().getAutomaticTokenAssociationsCount() > 0) {
             // automatic_token_associations does not exist prior to services 0.18.0
             autoAssociatedAccounts.clear();
-            recordItem.getRecord().getAutomaticTokenAssociationsList().stream()
+            recordItem.getTransactionRecord().getAutomaticTokenAssociationsList().stream()
                     .map(TokenAssociation::getAccountId)
                     .map(EntityId::of)
                     .forEach(autoAssociatedAccounts::add);
@@ -624,10 +624,10 @@ public class EntityRecordItemListener implements RecordItemListener {
 
             updateTokenSupply(
                     tokenId,
-                    recordItem.getRecord().getReceipt().getNewTotalSupply(),
+                    recordItem.getTransactionRecord().getReceipt().getNewTotalSupply(),
                     consensusTimestamp);
 
-            List<Long> serialNumbers = recordItem.getRecord().getReceipt().getSerialNumbersList();
+            List<Long> serialNumbers = recordItem.getTransactionRecord().getReceipt().getSerialNumbersList();
             for (int i = 0; i < serialNumbers.size(); i++) {
                 Nft nft = new Nft(serialNumbers.get(i), tokenId);
                 nft.setCreatedTimestamp(consensusTimestamp);
@@ -769,7 +769,7 @@ public class EntityRecordItemListener implements RecordItemListener {
         TransactionBody body = recordItem.getTransactionBody();
         boolean isTokenDissociate = body.hasTokenDissociate();
 
-        recordItem.getRecord().getTokenTransferListsList().forEach(tokenTransferList -> {
+        recordItem.getTransactionRecord().getTokenTransferListsList().forEach(tokenTransferList -> {
             TokenID tokenId = tokenTransferList.getToken();
             EntityId entityTokenId = EntityId.of(tokenId);
             EntityId payerAccountId = recordItem.getPayerAccountId();
@@ -821,7 +821,7 @@ public class EntityRecordItemListener implements RecordItemListener {
             }
 
             long consensusTimestamp = recordItem.getConsensusTimestamp();
-            recordItem.getRecord().getAutomaticTokenAssociationsList().forEach(tokenAssociation -> {
+            recordItem.getTransactionRecord().getAutomaticTokenAssociationsList().forEach(tokenAssociation -> {
                 // the only other transaction which creates auto associations is crypto transfer. The accounts and
                 // tokens in the associations should have been added to EntityListener when inserting the corresponding
                 // token transfers, so no need to duplicate the logic here
@@ -913,7 +913,7 @@ public class EntityRecordItemListener implements RecordItemListener {
 
             updateTokenSupply(
                     tokenId,
-                    recordItem.getRecord().getReceipt().getNewTotalSupply(),
+                    recordItem.getTransactionRecord().getReceipt().getNewTotalSupply(),
                     consensusTimestamp);
 
             tokenWipeAccountTransactionBody.getSerialNumbersList().forEach(serialNumber ->
@@ -1039,7 +1039,7 @@ public class EntityRecordItemListener implements RecordItemListener {
     private void onScheduledTransaction(RecordItem recordItem) {
         if (entityProperties.getPersist().isSchedules()) {
             long consensusTimestamp = recordItem.getConsensusTimestamp();
-            TransactionRecord transactionRecord = recordItem.getRecord();
+            TransactionRecord transactionRecord = recordItem.getTransactionRecord();
 
             // update schedule execute time
             Schedule schedule = new Schedule();
@@ -1052,13 +1052,13 @@ public class EntityRecordItemListener implements RecordItemListener {
     private void insertAssessedCustomFees(RecordItem recordItem) {
         if (entityProperties.getPersist().isTokens()) {
             long consensusTimestamp = recordItem.getConsensusTimestamp();
-            for (var protoAssessedCustomFee : recordItem.getRecord().getAssessedCustomFeesList()) {
+            for (var protoAssessedCustomFee : recordItem.getTransactionRecord().getAssessedCustomFeesList()) {
                 EntityId collectorAccountId = EntityId.of(protoAssessedCustomFee.getFeeCollectorAccountId());
                 // the effective payers must also appear in the *transfer lists of this transaction and the
                 // corresponding EntityIds should have been added to EntityListener, so skip it here.
                 List<EntityId> payerEntityIds = protoAssessedCustomFee.getEffectivePayerAccountIdList().stream()
                         .map(EntityId::of)
-                        .collect(Collectors.toList());
+                        .toList();
                 AssessedCustomFee assessedCustomFee = new AssessedCustomFee();
                 assessedCustomFee.setAmount(protoAssessedCustomFee.getAmount());
                 assessedCustomFee.setEffectivePayerEntityIds(payerEntityIds);
@@ -1187,11 +1187,11 @@ public class EntityRecordItemListener implements RecordItemListener {
         entities.add(entityId);
         entities.add(recordItem.getPayerAccountId());
 
-        recordItem.getRecord().getTransferList().getAccountAmountsList().forEach(accountAmount ->
+        recordItem.getTransactionRecord().getTransferList().getAccountAmountsList().forEach(accountAmount ->
                 entities.add(EntityId.of(accountAmount.getAccountID()))
         );
 
-        recordItem.getRecord().getTokenTransferListsList().forEach(transfer -> {
+        recordItem.getTransactionRecord().getTokenTransferListsList().forEach(transfer -> {
             entities.add(EntityId.of(transfer.getToken()));
 
             transfer.getTransfersList().forEach(accountAmount ->
