@@ -9,9 +9,9 @@ package com.hedera.mirror.importer.reader;
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  *      http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -129,7 +129,7 @@ public class ValidatedDataInputStream extends DataInputStream {
     private String getFullFieldName(String sectionName, String fieldName) {
         List<String> parts = Arrays.asList(resourceName, "field", sectionName, fieldName).stream()
                 .filter(StringUtils::isNotEmpty)
-                .collect(Collectors.toList());
+                .toList();
         if (parts.size() == 1) {
             return "";
         }
